Update eleventy, and update pages

--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,7 @@ title: "Andrey Azov — Personal Website"
   </p>
 
   <p>
-    I also use this space to collect links on topics that I find interesting:
+    I also use this space to collect links on topics that I find interesting, such as:
   </p>
 
   <nav>
