--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -3,10 +3,10 @@ layout: layouts/base.njk
 templateClass: tmpl-home
 ---
 
-{% block styles %}
+{% html "styles" %}
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet"/>
 <link rel="stylesheet" href="{{ '/assets/css/home.css' | url }}">
-{% endblock %}
+{% endhtml %}
 
 {{ content | safe }}
