--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,12 +11,6 @@ html, body {
   height: 100%;
 }
 
-body {
-  font-family: 'EB Garamond', serif;
-  font-size: 1.2rem;
-  line-height: 1.4;
-}
-
 main {
   padding: 0 1rem 2rem;
 }
@@ -36,4 +30,33 @@ ul {
 
 ul li {
   list-style-type: '– ';
+}
+
+
+@layer typography {
+
+  :root {
+    --base-font-size: 1.2rem;
+    --font-growth-scale: 1.15;
+    font-family: 'EB Garamond', serif;
+    font-size: var(--base-font-size);
+    line-height: 1.4;
+  }
+
+  h1 {
+    font-size: calc(1rem * 2.625);
+  }
+
+  h2 {
+    font-size: calc(1rem * 1.875);
+  }
+
+  h3 {
+    font-size: calc(1rem * 1.5);
+  }
+  
+  h4 {
+    font-size: calc(1rem * 1.3);
+  }
+
 }
