Reorganise blog directory

--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -5,11 +5,11 @@ templateClass: tmpl-about
 
 {% block styles %}
 <link rel="preload" href="/assets/css/navigation.css" as="style">
-<link rel="stylesheet" href="{{ '/assets/css/about.css' | url }}">
+<link rel="stylesheet" href="/assets/css/about.css">
 {% endblock %}
 
 {% block scripts %}
-<script src="/scripts/navigation.js" type="module"></script>
+<script src="/assets/scripts/navigation.js" type="module"></script>
 {% endblock %}
 
 <main>
