--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 
 {% html "styles" %}
 <link rel="preload" href="/assets/css/navigation.css" as="style">
-<link rel="stylesheet" href="{{ '/assets/css/post.css' | url }}">
+<link rel="stylesheet" href="/assets/css/post.css">
 {% endhtml %}
 
 <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
