--- a/src/publications.njk
+++ b/src/publications.njk
@@ -9,7 +9,7 @@ templateClass: tmpl-about
 
 {% block styles %}
 <link rel="preload" href="/assets/css/navigation.css" as="style">
-<link rel="stylesheet" href="{{ '/assets/css/bibliography.css' | url }}">
+<link rel="stylesheet" href="/assets/css/bibliography.css">
 {% endblock %}
 
 {% block scripts %}
